kubernetes.example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: battlebot-backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: battlebot-frontend
