kubernetes.example/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-svc
  namespace: battlebot-frontend
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: battlebot-frontend
