kubernetes.example/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: battlebot-frontend-gateway
  namespace: battlebot-frontend
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
#      allowedRoutes:
#        namespaces:
#          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: battlebot-frontend-route
  namespace: battlebot-frontend
spec:
  parentRefs:
    - name: battlebot-frontend-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: battlebot-frontend
          port: 80
